# vkbot

./: .gitignore  .~lock.test.xls#  Dockerfile  README.md  blueprint  commands.py  config.json  config.py  download.py  entry.py  file.txt  geo.py  joke.py  linkshandler.py  main.py  parse.py  pyproject.toml  recieve.py  requirements.txt  russian_roulette.py  s  server.py  sheethandler.py  table_xls.xls  table_xlsx.xlsx  test.ipynb  test.txt  users.db  whataweek.py
.github/workflows/: python-app-dev.yml  python-app-main.yml  python-app.yml
bot/: __init__.py  __main__.py
bot/constants/: __init__.py  environment.py  schedule.py
bot/db/: __init__.py  db.py  dump.sql
bot/keyboards/: __init__.py  blueprints_kb.py  edit_kb.py  menu_kb.py  schedule_kb.py
bot/logger/: __init__.py  logger.py
bot/routers/: __init__.py
bot/schedule/: __init__.py  schedule.py
bot/utils/: __init__.py  blueprints_request.py  headman_request.py  http.py  parity.py  personal_request.py  schedule_request.py
geobot/: __init__.py  config.json  geo.py  renderer.py
keyboards/: config_kb.py  menu_kb.py  schedule_kb.py  special_blueprints_kb.py
routers/: __init__.py  admin.py  aliases.py  config.py  donate.py  easter_egg.py  geobot.py  help.py  idiots.py  joke.py  menu.py  rickroll.py  schedule.py
schedule/: blueprint.py  recieve.py  sheethandler.py  whataweek.py
tests/: test_schedule.py
utils/: aiohttp_requests.py  attachments.py  constants.py  constants_blueprint.py  constants_schedule.py  exceptions.py  gifs.py  keyboards.py  settings.py  sqlite_requests.py  terminal_codes.py
(+70 files in other folders)
