[tool.poetry]
name = "vkbot"
version = "0.1.0"
description = ""
authors = ["darttusin <ivanchepikov444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
vkwave = "^0.2.16"
transliterate = "^1.10.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
